--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@
 
 services:
   - type: web
-    name: travel-portal-1 # <<--- YAHAN APNI RENDER SERVICE KA SAHI NAAM LIKHNA
+    name: travel-portal # <<--- YAHAN APNI RENDER SERVICE KA SAHI NAAM LIKHNA
     env: python
     
     # Python version specify karein.
@@ -26,7 +26,7 @@ services:
       - key: DEBUG
         value: "False" # <--- Production ke liye hamesha False
       - key: ALLOWED_HOSTS
-        value: 127.0.0.1,localhost,travel-portal-1.onrender.com # <--- Aapke Allowed Hosts
+        value: 127.0.0.1,localhost,travel-portal.onrender.com # <--- Aapke Allowed Hosts
       # Agar aap database use kar rahe hain (PostgreSQL), toh isko uncomment karein:
       # - key: DATABASE_URL
       #   fromDatabase: your-render-database-name # <<--- YAHAN APNE RENDER DB KA NAAM DALEIN
